--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
   "scripts": {
-    "build":"cd client && npm run build",
-    "install-client":"cd client && npm install",
+    "build": "cd client && npm run build",
+    "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
     "start": "node index.js",
-    "client":"cd client && npm start" 
+    "client": "cd client && npm start"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -21,6 +19,7 @@
   "homepage": "https://github.com/akashahmed-coder/React_Furniture_Project#readme",
   "dependencies": {
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "react-slideshow-image": "^4.0.5"
   }
 }
