--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "cd client && npm run build",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build",
-    "start": "node index.js",
-    "client": "cd client && npm start"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
